# CSubtitleWorkstation

./: .gitignore  .npmrc  AGENTS.md  README.md  TODO.md  index.html  package-lock.json  package.json  字幕压制工具_需求与技术方案.md
.agents/release/: RELEASE.md
.claude/commands/: release.md
.codex/commands/: release.md
.codex/scripts/: generate_changelog.py
.github/workflows/: release.yml
docs/: CACHE_AND_DATA.md  DEVELOPMENT_GUIDELINES.md  REQUIREMENTS.md  TODO.md  UPDATE_RELEASE.md
docs/plan/: VIDEO_TOOL_IDEAS.md
docs/updates/: latest.json
src/: App.vue  main.ts  styles.css  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: avs.rs  cc_subtitle.rs  compress.rs  config.rs  encoder.rs  ffmpeg.rs  media_tool.rs  mod.rs  proofread.rs  subtitle_tool.rs  text_conversion.rs  updater.rs  video.rs
src-tauri/src/models/: app_config.rs  avs_status.rs  compress_job.rs  ffmpeg_status.rs  mod.rs
src-tauri/src/services/: ass_logo.rs  avs_detector.rs  avs_workspace.rs  command_builder.rs  config_store.rs  encoder_detector.rs  ffmpeg_locator.rs  frame_extractor.rs  mod.rs  subtitle_analyzer.rs  temp_cleanup.rs  video_meta.rs
src/api/: avs.ts  ccSubtitle.ts  compress.ts  config.ts  encoder.ts  ffmpeg.ts  mediaTool.ts  proofread.ts  subtitleTool.ts  textConversion.ts  updater.ts  video.ts
src/components/: AppSelect.vue  AppToast.vue  ColorMatrixWarningBanner.vue  CommandPreviewCard.vue  (+12 more)
(+31 files in other folders)
