[package]
name = "csubtitle-workstation"
version = "0.1.0"
description = "CC subtitle hardsub workstation"
authors = ["CBash"]
edition = "2021"

[lib]
name = "csubtitle_workstation_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
thiserror = "2"
