[package]
name = "csubtitle-workstation"
version = "0.1.9"
description = "CC subtitle hardsub workstation"
authors = ["CBash"]
edition = "2021"

[lib]
name = "csubtitle_workstation_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-window-state = "2"
thiserror = "2"
ttf-parser = "0.25"
zhconv = { version = "0.4.1", features = ["opencc", "opencc-twp"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
